Talachas el may

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>El MAY TALACHAS</h1>
   <header class="header">
     <div>
-      <p class="logoheader">EL MAY <span class="spanheader">TALACHAS TU MEJOR OPCION</span></p>
+      <p class="logoheader">EL MAY <span class="spanheader">TALACHAS TU MEJOR OPCIÓN</span></p>
     </div>
     <nav class="nav">
       <label class="enlacesnav">llantas<a href=""></a></label>
